Front End and requerements

--- a/Craiglist/my_app/templates/base.html
+++ b/Craiglist/my_app/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="container nav-wrapper">
-            <a href="/" class="brand-logo">Craiglist Navbar</a>
+            <a href="/" class="brand-logo">Craiglist Scraping Site</a>
             <ul id="nav-mobile" class="right">
                 <li><a href="/">Home</a></li>
             </ul>
@@ -55,7 +55,7 @@
             <!-- Promo Content 3 goes here -->
             <div class="center">
                 <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
-                <p>A much sexier front-end to Craigslist</p>
+                <p>A much better front-end to Craigslist</p>
                 <p class="light center">I built this with ❤️</p>
             </div>
         </div>
