Front and back done.

--- a/Craiglist/my_app/templates/base.html
+++ b/Craiglist/my_app/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="container nav-wrapper">
-            <a href="/" class="brand-logo">Craiglist Scraping Site</a>
+            <a href="/" class="brand-logo">Craigslist Scraping Site</a>
             <ul id="nav-mobile" class="right">
                 <li><a href="/">Home</a></li>
             </ul>
