--- a/Craiglist/my_app/templates/my_app/new_search.html
+++ b/Craiglist/my_app/templates/my_app/new_search.html
@@ -5,48 +5,23 @@
     <h2 style="text-align: center">{{ search | title}}</h2>
 
     <div class="row">
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://dogtime.com/assets/uploads/2011/03/puppy-development.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>TEST</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://dogtime.com/assets/uploads/2011/03/puppy-development.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>TEST</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
+        {% for post in final_postings %}
+            <div class="col s4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="{{ post.1 }}"><img src="{{ post.3 }}" alt=""></a>
+                    </div>
+                    <div class="card-content">
+                        <p>{{ post.0 }}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="{{ post.1 }}">View listing: Price {{ post.2 }}</a>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://dogtime.com/assets/uploads/2011/03/puppy-development.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>TEST</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
+        
 
 {% endblock %}
 
